chore: kotlin 1.5 update and misc refactorings